# wikiIndustry

./: .env.example  .gitignore  CLAUDE.md  README.md  TECHNICAL_HANDOVER.md  all_news.json  beijing_news.json  checklist.md  dev.sh  docker-compose.yml  heilongjiang_news.json  keep-alive.sh  restart-dev.sh  start-all.sh  start.sh  stop.sh  test_auto_correlation.json  test_data.json  test_data_supplement.json  test_mcp_tools.py
services/agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/agent/agent_mcp/: __init__.py  server.py  tools.py
services/agent/app/: main.py
services/agent/app/api/v1/: router.py  routes_correlation.py  routes_docs.py  (+3 more)
services/agent/app/core/: settings.py
services/agent/app/services/: correlation_mining.py  graph_builder.py  graph_qa_service.py  json_processor.py  local_embedding.py  rag_engine.py
services/agent/app/store/: sqlite.py
services/agent/oneke/: Dockerfile  http_server.py
services/agent/scripts/: check-deps.sh  setup.sh  start-deps.sh  stop-deps.sh
services/agent/tests/: test_agent_mcp.py
services/backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/backend/app/: main.py
services/backend/app/core/: settings.py
services/backend/app/services/: batch_ingestor.py  correlation_mining.py  embedding_service.py  graph_builder.py  graph_qa_service.py  json_processor.py  owl_exporter.py  rag_engine.py  rag_engine_v2.py  schema_registry.py
services/backend/app/store/: sqlite.py
services/backend/tests/: test_graph_contract.py  test_health.py
(+26 files in other folders)
