[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-agent"
version = "0.1.0"
description = "WikiProject Agent MCP Server - Agent atomic capabilities for knowledge graph + RAG"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "neo4j>=5.19.0",
  "python-multipart>=0.0.9",
  "mcp>=1.6.0",
  "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
wiki-agent = "agent_mcp.server:main"

[tool.setuptools]
packages = ["agent_mcp", "app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
